# StickerHub

./: .env.example  .gitignore  README.md  SECURITY.md  pyproject.toml  requirements.txt
app/: __init__.py  extensions.py  models.py  security.py
app/routes/: auth.py  stickers.py  web.py
app/static/: styles.css
app/templates/: auth.html  base.html  dashboard.html  index.html  login.html  mfa_login.html  register.html  security.html  upload.html
public/: styles.css
scripts/: security_check.py
