[project]
name = "stickerhub"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "Flask==3.0.3",
    "Flask-Cors==4.0.1",
    "Flask-JWT-Extended==4.6.0",
    "Flask-Limiter==3.8.0",
    "Flask-Login==0.6.3",
    "Flask-Migrate==4.0.7",
    "Flask-SQLAlchemy==3.1.1",
    "Flask-WTF==1.2.1",
    "SQLAlchemy==2.0.31",
    "bleach==6.1.0",
    "cloudinary==1.41.0",
    "gunicorn==22.0.0",
    "Pillow==10.4.0",
    "psycopg2-binary==2.9.9",
    "pyotp==2.9.0",
    "python-dotenv==1.0.1",
]

[tool.vercel]
entrypoint = "main:app"
